[package]
name = "xchain"
version = "0.1.0"
edition = "2021"

[workspace]
exclude = []
members = [
    "cli/arbiter",
    "crates/contracts",
    "crates/ethabi",
    "crates/rpc",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
