[package]
name = "ferro-watch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
contracts = { path = "../../crates/contracts" }
ethabi = { path = "../../crates/ethabi" }
rpc = { path = "../../crates/rpc" }
hex = "0.4"
reqwest = "0.11"
serde_json = "1.0"

[dependencies.tokio]
version = "1"
features = ["full"]
