[package]
name = "klay-watch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
contracts = { path = "../../crates/contracts" }
ethabi = { path = "../../crates/ethabi" }
rpc = { path = "../../crates/rpc" }
futures = "0.3"
serde_json = "1"

[dependencies.hex]
version = "0.4"
features = ["serde"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tokio]
version = "1"
features = ["full"]
