[package]
name = "contracts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4"
thiserror = "1"

[dependencies.ethabi]
path = "../ethabi"

[dependencies.rpc]
path = "../rpc"

[dependencies.tiny-keccak]
version = "2"
features = ["keccak"]

[dev-dependencies.tokio]
version = "1"
features = ["full"]
