[package]
name = "rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
futures = "0.3"
hex = "0.4"
log = "0.4"
num-bigint = "0.4"
num-traits = "0.2"
pin-project = "1"
serde_json = "1"
thiserror = "1"

[dependencies.tokio-tungstenite]
version = "0.18"
features = ["native-tls"]
 
[dependencies.reqwest]
version = "0.11"
features = ["json"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dev-dependencies]
testcontainers = "0.14"
